# iotPlatform

./: Flow  LICENSE  WORKIN.md  partitions.csv
iotplatform_docs/: CONTRIBUTING.md  LICENSE  README.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  key.h  macro.h  main.cpp  types.h
main/api/: api.cpp  api.h
main/bus_event/: event_bus.cpp  event_bus.h
main/camera/: camera.cpp  camera.h  camera_api.cpp  camera_api.h  camera_controller.cpp  camera_controller.h
main/features/: features.hpp
main/filesystem/: Fs.cpp  Fs.h  Sd.cpp  Sd.h  fssys.cpp  fssys.h
main/led_manager/: LedManager.cpp  LedManager.h
main/mqtt_client/: MqttClient.hpp
main/ota/: ota.cpp  ota.h
main/persistence/: persistence.cpp  persistence.h
main/sd_card/: sd_card.cpp  sd_card.h
main/utils/: utils.cpp  utils.h
main/wifi_manager/: WiFiConfig.cpp  WiFiConfig.h  WiFiManager.cpp  WiFiManager.h  WiFiScanner.cpp  WiFiScanner.h  ap_persistence.cpp  ap_persistence.h  ap_persistence_async.cpp  ap_persistence_async.h  sta_persistence.cpp  sta_persistence.h  sta_persistence_async.cpp  sta_persistence_async.h  wifi_api.cpp  wifi_api.h  wifi_manager.cpp  wifi_manager.h  wifi_persistence.cpp  wifi_persistence.h  wifi_persistence_async.cpp  wifi_persistence_async.h  wifi_types.h
